--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     </div> -->
     <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
     <script>
-        let socket = io.connect("http://localhost:3000")
+        let socket = io.connect("https://dj-open-board.herokuapp.com/")
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
